# gfg

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: workflow.py
agent/tools/: fetch_db.py  sql_generator.py
api/: main.py
frontend/: package-lock.json
frontend/src/: App.css  App.js
frontend/src/components/Chat/: ChatMessage.css  ChatPanel.css  ChatPanel.js
frontend/src/components/Header/: Header.css  Header.js
